--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ commands:
             type $Env:USERPROFILE/.cargo/config
       - run: choco install conan
       - run: choco install protoc
+      - run: choco install mingw
+      - run: choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
       - print_versions
 
 version: 2.1
